--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Paul Jialiang Wu
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: AI Lead|Data Science Communicator|Entrepreneur
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: wjlgatech@gmail.com
   facebook:
   flickr:
   github: barryclark/jekyll-now
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/paul-jialiang-wu-67aa7179/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
