personal info update

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: wjlgatech@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/wjlgatech
   instagram:
   linkedin: https://www.linkedin.com/in/paul-jialiang-wu-67aa7179/
   pinterest:
