add ggl analytics

--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,10 @@
 name: Paul Jialiang Wu
 
 # Short bio or description (displayed in the header)
-description: AI Lead|Data Science Communicator|Entrepreneur
+description: AI/ML/DS Product Lead | Strategic Storyteller | Investor | Entrepreneur
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://github.com/wjlgatech/wjlgatech.github.io/blob/master/images/Paul_JL_Wu.JPG
 #
 # Flags below are optional
 #
@@ -26,9 +25,9 @@ footer-links:
   linkedin: https://www.linkedin.com/in/paul-jialiang-wu-67aa7179/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  twitter: wjlgatech
+  stackoverflow: users/2654023/paul-j # your stackoverflow profile, e.g. users/50476/bart-kiers (no quote needed)
+  youtube: channel/UCYbei-m8sjn-tf-lT1j8F9A # e.g. channel/UCYbei-m8sjn-tf-lT27j5D or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
@@ -37,7 +36,7 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: G-8SHHVX68KN
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
